objects/Item_Update__c.object
<CustomObject>
    <fields>
        <fullName>Other_adjustment__c</fullName>
        <label>IIP: Other adjustment $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pairings__c</fullName>
        <description>Food pairings for the item</description>
        <inlineHelpText>Chose one or more pairings for this item</inlineHelpText>
        <label>IIP: Pairings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beef</fullName>
                </value>
                <value>
                    <fullName>Lamb</fullName>
                </value>
                <value>
                    <fullName>Pork</fullName>
                </value>
                <value>
                    <fullName>Poultry</fullName>
                </value>
                <value>
                    <fullName>Game</fullName>
                </value>
                <value>
                    <fullName>Fish</fullName>
                </value>
                <value>
                    <fullName>Steak Fish</fullName>
                </value>
                <value>
                    <fullName>Fin Fish</fullName>
                </value>
                <value>
                    <fullName>Spicy Food</fullName>
                </value>
                <value>
                    <fullName>Mild &amp; Soft Cheese</fullName>
                </value>
                <value>
                    <fullName>Mature &amp; Hard Cheese</fullName>
                </value>
                <value>
                    <fullName>Meat</fullName>
                </value>
                <value>
                    <fullName>BBQ</fullName>
                </value>
                <value>
                    <fullName>Shellfish</fullName>
                </value>
                <value>
                    <fullName>Pasta</fullName>
                </value>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
                <value>
                    <fullName>Chocolate Desserts</fullName>
                </value>
                <value>
                    <fullName>Sweet Desserts</fullName>
                </value>
                <value>
                    <fullName>Fruity Desserts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pallet_Type__c</fullName>
        <label>IIP: Pallet Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wood</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pending_COLA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This status is for compliance to determine if a COLA is pending TTB approval.</description>
        <inlineHelpText>Compliance only: Check this box if the item in progress is awaiting COLA approval from the TTB.</inlineHelpText>
        <label>Pending COLA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pending_Costing_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that costing was completed by Accounting</inlineHelpText>
        <label>IIP: Pending Costing Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planning_Code__c</fullName>
        <label>Planning Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presale_End_date__c</fullName>
        <label>IIP: Presale End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Presale_Price_Discount__c</fullName>
        <label>IIP: Presale Price Discount $ (Case)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Presale_Start_date__c</fullName>
        <label>IIP: Presale Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Book_Month__c</fullName>
        <description>Choose the first day of the month in which this item needs to appear in the Pricebook.</description>
        <inlineHelpText>Choose the first day of the month in which this item needs to appear in the Pricebook.</inlineHelpText>
        <label>IIP: Price Book Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Book_Status__c</fullName>
        <label>Price Book Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is the status for whether or not the item has been price posted</description>
        <inlineHelpText>Compliance only manages this status field and checks the box when the item has been price posted. Details of the price posting can be managed via Chatter.</inlineHelpText>
        <label>Price Posted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Private_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IIP: Private Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Benefits__c</fullName>
        <description>Product benefits for one-pager sell sheets</description>
        <inlineHelpText>Describe the product&apos;s benefits; up to 10,000 characters.</inlineHelpText>
        <label>IIP: Benefits</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Features__c</fullName>
        <description>Product features for the one-pager sell sheets</description>
        <inlineHelpText>Describe the product&apos;s features; up to 10,000 characters.</inlineHelpText>
        <label>IIP: Features</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Production_UOM__c</fullName>
        <description>Default to &apos;CS&apos; for case, and is only for winery use. Can only be changed from &apos;CS&apos; for &apos;KG&apos; Keg winery produced items. BT = Bottle CS = Case KG = Keg</description>
        <inlineHelpText>Default to &apos;CS&apos; for case, and is only for winery use. Can only be changed from &apos;CS&apos; for &apos;KG&apos; Keg winery produced items. BT = Bottle CS = Case KG = Keg</inlineHelpText>
        <label>IIP: Production UOM</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Base_Unit_Volume_UOM__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CS</fullName>
                    <default>true</default>
                    <label>CS</label>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proof__c</fullName>
        <label>IIP: Proof</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Alcohol_Percentage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>110</fullName>
                    <label>11</label>
                </value>
                <value>
                    <fullName>116</fullName>
                    <label>11.6</label>
                </value>
                <value>
                    <fullName>120</fullName>
                    <label>12</label>
                </value>
                <value>
                    <fullName>130</fullName>
                    <label>13</label>
                </value>
                <value>
                    <fullName>140</fullName>
                    <label>14</label>
                </value>
                <value>
                    <fullName>150</fullName>
                    <label>15</label>
                </value>
                <value>
                    <fullName>151</fullName>
                    <label>15.1</label>
                </value>
                <value>
                    <fullName>160</fullName>
                    <label>16</label>
                </value>
                <value>
                    <fullName>170</fullName>
                    <label>17</label>
                </value>
                <value>
                    <fullName>180</fullName>
                    <label>18</label>
                </value>
                <value>
                    <fullName>182</fullName>
                    <label>18.2</label>
                </value>
                <value>
                    <fullName>184</fullName>
                    <label>18.4</label>
                </value>
                <value>
                    <fullName>190</fullName>
                    <label>19</label>
                </value>
                <value>
                    <fullName>195</fullName>
                    <label>19.5</label>
                </value>
                <value>
                    <fullName>200</fullName>
                    <label>20</label>
                </value>
                <value>
                    <fullName>206</fullName>
                    <label>20.6</label>
                </value>
                <value>
                    <fullName>210</fullName>
                    <label>21</label>
                </value>
                <value>
                    <fullName>214</fullName>
                    <label>21.4</label>
                </value>
                <value>
                    <fullName>220</fullName>
                    <label>22</label>
                </value>
                <value>
                    <fullName>230</fullName>
                    <label>23</label>
                </value>
                <value>
                    <fullName>232</fullName>
                    <label>23.2</label>
                </value>
                <value>
                    <fullName>236</fullName>
                    <label>23.6</label>
                </value>
                <value>
                    <fullName>238</fullName>
                    <label>23.8</label>
                </value>
                <value>
                    <fullName>240</fullName>
                    <label>24</label>
                </value>
                <value>
                    <fullName>242</fullName>
                    <label>24.2</label>
                </value>
                <value>
                    <fullName>244</fullName>
                    <label>24.4</label>
                </value>
                <value>
                    <fullName>246</fullName>
                    <label>24.6</label>
                </value>
                <value>
                    <fullName>248</fullName>
                    <label>24.8</label>
                </value>
                <value>
                    <fullName>250</fullName>
                    <label>25</label>
                </value>
                <value>
                    <fullName>252</fullName>
                    <label>25.2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Price_Level__c</fullName>
        <label>Purchase Price Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Accounting_Cost__c</fullName>
        <label>Quantity Accounting Cost</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ratings__c</fullName>
        <label>IIP: Ratings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recall_Brand_Mgr_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recall Brand Mgr Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recall_Compliance_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recall Compliance Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recall_Operations_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recall Operations Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reject_Comments__c</fullName>
        <label>Reject Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Restrictions_by_Area__c</fullName>
        <label>IIP: Sales Restrictions by Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Billback_Percent__c</fullName>
        <label>IIP: Sample Billback Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Samples_Allowed__c</fullName>
        <label>Samples Allowed</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select_SKU_for_Louisiana__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IIP: Select SKU for Louisiana?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selection__c</fullName>
        <label>IIP: Selection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EST</fullName>
                    <label>Estate</label>
                </value>
                <value>
                    <fullName>PRM</fullName>
                    <label>Premier</label>
                </value>
                <value>
                    <fullName>CRU</fullName>
                    <label>Cru</label>
                </value>
                <value>
                    <fullName>SPR</fullName>
                    <label>Spirits</label>
                </value>
                <value>
                    <fullName>FAB</fullName>
                    <label>Food Beverage</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sell_by_Default_Days__c</fullName>
        <label>Sell by Default Days</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>IIP: Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number_Required__c</fullName>
        <label>Serial Number Required</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servings_per_Package__c</fullName>
        <label>IIP: Servings per Base Item</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shelf_Life_Days__c</fullName>
        <label>Shelf Life Days</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Item_Number_SKU__c</fullName>
        <externalId>true</externalId>
        <label>IIP: Short Item Number (SKU)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>Size of bottle</description>
        <label>IIP: Size of Bottle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>375</fullName>
                    <label>375 ML</label>
                </value>
                <value>
                    <fullName>750</fullName>
                    <label>750 ML</label>
                </value>
                <value>
                    <fullName>1LT</fullName>
                    <label>1 LT</label>
                </value>
                <value>
                    <fullName>1.5</fullName>
                    <label>1.5 LT</label>
                </value>
                <value>
                    <fullName>3LT</fullName>
                    <label>3 LT</label>
                </value>
                <value>
                    <fullName>9LT</fullName>
                    <label>9 LT</label>
                </value>
                <value>
                    <fullName>195</fullName>
                    <label>Keg 19.5 L</label>
                </value>
                <value>
                    <fullName>50M</fullName>
                    <label>50 ML</label>
                </value>
                <value>
                    <fullName>100</fullName>
                    <label>100 ML</label>
                </value>
                <value>
                    <fullName>180</fullName>
                    <label>180 ML</label>
                </value>
                <value>
                    <fullName>187</fullName>
                    <label>187 ML</label>
                </value>
                <value>
                    <fullName>200</fullName>
                    <label>200 ML</label>
                </value>
                <value>
                    <fullName>250</fullName>
                    <label>250 ML</label>
                </value>
                <value>
                    <fullName>300</fullName>
                    <label>300 ML</label>
                </value>
                <value>
                    <fullName>330</fullName>
                    <label>330 ML</label>
                </value>
                <value>
                    <fullName>500</fullName>
                    <label>500 ML</label>
                </value>
                <value>
                    <fullName>700</fullName>
                    <label>700 ML</label>
                </value>
                <value>
                    <fullName>720</fullName>
                    <label>720 ML</label>
                </value>
                <value>
                    <fullName>175</fullName>
                    <label>1.75 LT</label>
                </value>
                <value>
                    <fullName>5LT</fullName>
                    <label>5 LT</label>
                </value>
                <value>
                    <fullName>6LT</fullName>
                    <label>6 LT</label>
                </value>
                <value>
                    <fullName>12L</fullName>
                    <label>12 LT</label>
                </value>
                <value>
                    <fullName>15L</fullName>
                    <label>15 LT</label>
                </value>
                <value>
                    <fullName>18L</fullName>
                    <label>18 LT</label>
                </value>
                <value>
                    <fullName>400</fullName>
                    <label>400 ML</label>
                </value>
                <value>
                    <fullName>650</fullName>
                    <label>650 ML</label>
                </value>
                <value>
                    <fullName>HBL</fullName>
                    <label>Half Barrel 79.5 L</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size_in_Liters__c</fullName>
        <formula>CASE(Size__c, 
&quot;20&quot;, 0.0200, 
&quot;30&quot;, 0.0300, 
&quot;50&quot;, 0.0500, 
&quot;100&quot;, 0.1000, 
&quot;120&quot;, 0.1200, 
&quot;130&quot;, 0.1300, 
&quot;180&quot;, 0.1800, 
&quot;187&quot;, 0.1870, 
&quot;200&quot;, 0.2000, 
&quot;250&quot;, 0.2500, 
&quot;300&quot;, 0.3000, 
&quot;303&quot;, 0.3030, 
&quot;375&quot;, 0.3750, 
&quot;500&quot;, 0.5000, 
&quot;700&quot;, 0.7000, 
&quot;720&quot;, 0.7200, 
&quot;750 ML&quot;, 0.7500, 
&quot;1 LT&quot;, 1.000, 
&quot;1.50 LT&quot;, 1.500, 
&quot;175&quot;, 1.750, 
&quot;180&quot;, 1.800, 
&quot;2LT&quot;, 2.000, 
&quot;3 LT&quot;, 3.000, 
&quot;4LT&quot;, 4.000, 
&quot;450&quot;, 4.500, 
&quot;5LT&quot;, 5.000, 
&quot;6LT&quot;, 6.000, 
&quot;7LT&quot;, 7.000, 
&quot;8LT&quot;, 8.000, 
&quot;9 LT&quot;, 9.000, 
&quot;12L&quot;, 12.000, 
&quot;15L&quot;, 15.000, 
&quot;18L&quot;, 18.000, 
&quot;19L&quot;, 19.000, 
&quot;20L&quot;, 20.000, 
&quot;25L&quot;, 25.000, 
&quot;28L&quot;, 28.000, 
&quot;30L&quot;, 30.000, 
&quot;45L&quot;, 45.000, 
&quot;50L&quot;, 50.000, 
&quot;60L&quot;, 60.000, 
0.0000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IIP: Size in Liters</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Region__c</fullName>
        <formula>Geography__r.State_Region_of_Origin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IIP: State / Region of Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Completed_Locked_Timestamp__c</fullName>
        <label>Status = Completed Locked Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Std_Cost__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References Standard Cost for Item</description>
        <label>IIP: Standard Cost Reference</label>
        <referenceTo>Std_Cost__c</referenceTo>
        <relationshipLabel>Items - In Process</relationshipLabel>
        <relationshipName>Items_In_Process</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stocking_Type__c</fullName>
        <label>IIP: Stocking Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>9</fullName>
                    <default>true</default>
                    <label>9</label>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Style__c</fullName>
        <label>IIP: Style</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Earthy</fullName>
                </value>
                <value>
                    <fullName>Fruit Forward</fullName>
                </value>
                <value>
                    <fullName>Fresh</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
                <value>
                    <fullName>Vibrant</fullName>
                </value>
                <value>
                    <fullName>Aromatic</fullName>
                </value>
                <value>
                    <fullName>Rich</fullName>
                </value>
                <value>
                    <fullName>Lush</fullName>
                </value>
                <value>
                    <fullName>Full Bodied</fullName>
                </value>
                <value>
                    <fullName>Medium Bodied</fullName>
                </value>
                <value>
                    <fullName>Light Bodied</fullName>
                </value>
                <value>
                    <fullName>Pure</fullName>
                </value>
                <value>
                    <fullName>Chewy</fullName>
                </value>
                <value>
                    <fullName>Spicy</fullName>
                </value>
                <value>
                    <fullName>Structured</fullName>
                </value>
                <value>
                    <fullName>Smooth</fullName>
                </value>
                <value>
                    <fullName>Bold</fullName>
                </value>
                <value>
                    <fullName>Powerful</fullName>
                </value>
                <value>
                    <fullName>Dense</fullName>
                </value>
                <value>
                    <fullName>Crisp</fullName>
                </value>
                <value>
                    <fullName>Intense</fullName>
                </value>
                <value>
                    <fullName>Classic</fullName>
                </value>
                <value>
                    <fullName>Delicate</fullName>
                </value>
                <value>
                    <fullName>Elegant</fullName>
                </value>
                <value>
                    <fullName>Juicy</fullName>
                </value>
                <value>
                    <fullName>Lively</fullName>
                </value>
                <value>
                    <fullName>Layered</fullName>
                </value>
                <value>
                    <fullName>Tropical</fullName>
                </value>
                <value>
                    <fullName>Creamy</fullName>
                </value>
                <value>
                    <fullName>Sweet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Class__c</fullName>
        <description>Sub Class in the SGWS taxonomy classification system.</description>
        <inlineHelpText>Sub Class in the SGWS taxonomy classification system.</inlineHelpText>
        <label>IIP: Sub Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Class__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Class</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <formula>Geography__r.Sub_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IIP: Sub Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_Brand_Mgr_Timestamp__c</fullName>
        <label>Submit Brand Mgr Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submit_Compliance_Timestamp__c</fullName>
        <label>Submit Compliance Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submit_Operations_Timestamp__c</fullName>
        <label>Submit Operations Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submit_for_Brand_Manager_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit for Brand VP Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submit_for_Compliance_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit for Compliance Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submit_for_Operations_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit for Operations Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitter_Comments__c</fullName>
        <description>Used to capture approval history comments by the submitter.</description>
        <label>Submission Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sugar_Level__c</fullName>
        <description>The sugar level of grams per liter</description>
        <label>IIP: Sugar Level g/L</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suggested_Opening_Order__c</fullName>
        <label>IIP: Suggested Opening Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_Retail_Price__c</fullName>
        <label>IIP: Suggested Retail Price $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Supplier_Address_Book_Number__c</fullName>
        <formula>Supplier__r.Supplier__r.Supplier_Address_Book_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IIP: Supplier Address Book Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Currency__c</fullName>
        <formula>TEXT( Supplier__r.Supplier__r.Supplier_Currency__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IIP: Supplier Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IIP: Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Supplier_Brand_Association__c.Brand__c</field>
                <operation>equals</operation>
                <valueField>$Source.Brand__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Supplier_Brand_Association__c</referenceTo>
        <relationshipLabel>Items - In Process</relationshipLabel>
        <relationshipName>Items_In_Process</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TTB_COLA__c</fullName>
        <label>IIP: TTB COLA #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTB_DCOLA__c</fullName>
        <label>IIP: TTB DCOLA#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tasting_Notes__c</fullName>
        <label>IIP: Tasting Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tetra_Pack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IIP: Tetra Pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Label_Images__c</fullName>
        <label>Total Label Images</label>
        <summaryForeignKey>Item_Files__c.Parent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tray_Pack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IIP: Tray Pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unfinished_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Items that are not finished good and have a U# SKU</description>
        <inlineHelpText>Items that are not finished good and have a U# SKU</inlineHelpText>
        <label>IIP: Unfinished Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UoM_Component__c</fullName>
        <label>UoM Component</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UoM_Pricing__c</fullName>
        <label>UoM Pricing</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UoM_Purchasing__c</fullName>
        <label>UoM Purchasing</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UoM_Secondary__c</fullName>
        <label>UoM Secondary</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UoM_Shipping__c</fullName>
        <label>UoM Shipping</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UoM_UPC__c</fullName>
        <label>UoM UPC</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UoM_Volume__c</fullName>
        <label>UoM Volume</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UoM_Weight__c</fullName>
        <label>UoM Weight</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IIP: VAP</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>